feat: add external media replacement
